--- a/css/mainStyle.css
+++ b/css/mainStyle.css
@@ -21,6 +21,63 @@ body {
   transition: 0.3s;
 }
 
+.modalOverlay{
+  z-index: 1;
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  background-color: #3335;
+  backdrop-filter: blur(10px);
+  display: none;
+  justify-content: center;
+  align-items: center;
+}
+
+.modalPs{
+  width: 800px;
+  height: 1000px;
+  background-color: #fff;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 20px;
+}
+.modalPs h2{
+  margin: 0;
+  margin-bottom: 20px;
+}
+.modalPs form{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+}
+.modalPs form textarea{
+  width: 100%;
+  height: 100%;
+  resize: none;
+  border: none;
+  font-family: '돋음', Arial, Helvetica, sans-serif;
+  font-size: 18px;
+}
+.modalPs form button{
+  width: 160px;
+  height: 50px;
+  border: none;
+  border-radius: 25px;
+  cursor: pointer;
+  background-color: var(--main-color);
+}
+textarea{
+  grid-row: 1/2;
+	grid-column: 1/1;
+  resize: none;
+  margin-bottom: 20px;
+}
+
 header {
   border-bottom: 1px solid var(--border-color);
   padding: 1rem;
@@ -148,6 +205,7 @@ header h1 {
   background: var(--card-background);
   font-family: '돋음';
   position: relative;
+  cursor: pointer;
 }
 .card:last-child{
   margin-bottom: 10px;
