--- a/css/mainStyle.css
+++ b/css/mainStyle.css
@@ -35,7 +35,7 @@ body {
 
 .modalPs{
   width: 800px;
-  height: 1000px;
+  height: 90vh;
   background-color: #fff;
   border-radius: 10px;
   display: flex;
