--- a/css/mainStyle.css
+++ b/css/mainStyle.css
@@ -56,6 +56,7 @@ body {
   height: 100%;
 }
 .modalPs form textarea{
+  margin-bottom: 20px;
   width: 100%;
   height: 100%;
   resize: none;
@@ -70,12 +71,9 @@ body {
   border-radius: 25px;
   cursor: pointer;
   background-color: var(--main-color);
-}
-textarea{
-  grid-row: 1/2;
-	grid-column: 1/1;
-  resize: none;
-  margin-bottom: 20px;
+  font-family: '돋음', Arial, Helvetica, sans-serif;
+  font-size: 16px;
+  font-weight: 700;
 }
 
 header {
